--- a/code/detail.html
+++ b/code/detail.html
@@ -606,54 +606,183 @@
                         <br>
                         <div class="mt-3 d-flex justify-content-between">
                             <div class="d-flex">
-                                <div>
-                                    <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-60" alt="">
-                                </div>
-                                <div class="">
-                                    <span class="text-link f-9">Rani</span><br>
-                                    <span class="fc-text ml-2 f-9">1 bulan lalu</span>
-                                </div>
-                                <div class="ml-4 w-75">
+                                <div class="d-flex">
                                     <div>
-                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
-                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
-                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
-                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
-                                        <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-60" alt="">
                                     </div>
-                                    <p class="f-10">Barangnya bagus banget, tidak ada cacat.</p>
-                                    <a href="">
-                                        <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
-                                    </a>
-                                    <div class="card rounded-18 bg-light border-0">
-                                        <div class="card-body">
-                                            <div class="d-flex">
-                                                <div>
-                                                    <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-35" alt="">
-                                                </div>
+                                    <div class="ml-2 d-flex flex-column">
+                                        <span class="text-link f-9">Rani</span>
+                                        <span class="fc-text ml-2 f-9 w-max">1 bulan lalu</span>
+                                    </div>
+                                </div>
+                                <div class="d-flex">
+                                    <div class="ml-5 w-75">
+                                        <div>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        </div>
+                                        <p class="f-10">Barangnya bagus banget, tidak ada cacat.</p>
+                                        <a href="">
+                                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                                        </a>
+                                        <div class="card rounded-18 bg-light border-0">
+                                            <div class="card-body">
                                                 <div class="d-flex">
-                                                    <div class="ml-2">
-                                                        <span class="f-10">Store.id</span><br>
-                                                        <span class="fc-textf-10">1 minggu lalu</span>
+                                                    <div>
+                                                        <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-35" alt="">
                                                     </div>
-                                                    <div class="item-badge">
-                                                        <span class="success">
-                                                            Penjual
-                                                        </span>
+                                                    <div class="d-flex">
+                                                        <div class="ml-2">
+                                                            <a href="" class="text-link">
+                                                                <span class="f-10">Store.id</span>
+                                                            </a>
+                                                            <br>
+                                                            <span class="fc-text f-9 ml-2">1 minggu lalu</span>
+                                                        </div>
+                                                        <div class="item-badge">
+                                                            <span class="success">
+                                                                Penjual
+                                                            </span>
+                                                        </div>
                                                     </div>
                                                 </div>
+                                                <p class="pl-5 mb-0 mt-2 f-10">
+                                                    Sip mantap gan, Semoga cocok dan produknya selalu memuaskan ya. Kami tunggu orderan berikutnya, <br><br> Terimakasih.
+                                                </p>
                                             </div>
-                                            <p class="pl-5 mt-2">
-                                                Sip mantap gan, Semoga cocok dan produknya selalu memuaskan ya. Kami tunggu orderan berikutnya, <br><br> Terimakasih.
-                                            </p>
                                         </div>
                                     </div>
+                                    <div class="d-flex">
+                                        <button class="btn-icon">
+                                            <img src="../assets/WEB/ICON/ICON WEB89.svg" class="w-20" alt="">
+                                        </button>
+                                        <a href="" class="text-link">Laporkan</a>
+                                    </div>
                                 </div>
-                                <div class="">
-                                    <button class="btn-white p-6-20 rounded-18">
-                                        <img src="../assets/WEB/ICON/ICON WEB89.svg" class="w-20" alt="">
-                                    </button>
-                                    <a href="" class="text-link">Laporkan</a>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="mt-3 d-flex justify-content-between">
+                            <div class="d-flex">
+                                <div class="d-flex">
+                                    <div>
+                                        <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-60" alt="">
+                                    </div>
+                                    <div class="ml-2 d-flex flex-column">
+                                        <span class="text-link f-9">Rani</span>
+                                        <span class="fc-text ml-2 f-9 w-max">1 bulan lalu</span>
+                                    </div>
+                                </div>
+                                <div class="d-flex">
+                                    <div class="ml-5 w-75">
+                                        <div>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        </div>
+                                        <p class="f-10">Barangnya bagus banget, tidak ada cacat.</p>
+                                        <a href="">
+                                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                                        </a>
+                                        <div class="card rounded-18 bg-light border-0">
+                                            <div class="card-body">
+                                                <div class="d-flex">
+                                                    <div>
+                                                        <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-35" alt="">
+                                                    </div>
+                                                    <div class="d-flex">
+                                                        <div class="ml-2">
+                                                            <a href="" class="text-link">
+                                                                <span class="f-10">Store.id</span>
+                                                            </a>
+                                                            <br>
+                                                            <span class="fc-text f-9 ml-2">1 minggu lalu</span>
+                                                        </div>
+                                                        <div class="item-badge">
+                                                            <span class="success">
+                                                                Penjual
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <p class="pl-5 mb-0 mt-2 f-10">
+                                                    Sip mantap gan, Semoga cocok dan produknya selalu memuaskan ya. Kami tunggu orderan berikutnya, <br><br> Terimakasih.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex">
+                                        <button class="btn-icon">
+                                            <img src="../assets/WEB/ICON/ICON WEB89.svg" class="w-20" alt="">
+                                        </button>
+                                        <a href="" class="text-link">Laporkan</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="mt-3 d-flex justify-content-between">
+                            <div class="d-flex">
+                                <div class="d-flex">
+                                    <div>
+                                        <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-60" alt="">
+                                    </div>
+                                    <div class="ml-2 d-flex flex-column">
+                                        <span class="text-link f-9">Rani</span>
+                                        <span class="fc-text ml-2 f-9 w-max">1 bulan lalu</span>
+                                    </div>
+                                </div>
+                                <div class="d-flex">
+                                    <div class="ml-5 w-75">
+                                        <div>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                            <object data="../assets/WEB/ICON/bintang.svg" class="w-15" type=""></object>
+                                        </div>
+                                        <p class="f-10">Barangnya bagus banget, tidak ada cacat.</p>
+                                        <a href="">
+                                            <img src="../assets/WEB/IMAGE/IMAGE WEB71.jpg" class="w-60 m-2" alt="">
+                                        </a>
+                                        <div class="card rounded-18 bg-light border-0">
+                                            <div class="card-body">
+                                                <div class="d-flex">
+                                                    <div>
+                                                        <img src="../assets/WEB/ICON/ICON WEB127.svg" class="w-35" alt="">
+                                                    </div>
+                                                    <div class="d-flex">
+                                                        <div class="ml-2">
+                                                            <a href="" class="text-link">
+                                                                <span class="f-10">Store.id</span>
+                                                            </a>
+                                                            <br>
+                                                            <span class="fc-text f-9 ml-2">1 minggu lalu</span>
+                                                        </div>
+                                                        <div class="item-badge">
+                                                            <span class="success">
+                                                                Penjual
+                                                            </span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <p class="pl-5 mb-0 mt-2 f-10">
+                                                    Sip mantap gan, Semoga cocok dan produknya selalu memuaskan ya. Kami tunggu orderan berikutnya, <br><br> Terimakasih.
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="d-flex">
+                                        <button class="btn-icon">
+                                            <img src="../assets/WEB/ICON/ICON WEB89.svg" class="w-20" alt="">
+                                        </button>
+                                        <a href="" class="text-link">Laporkan</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
