update nav & update detail

--- a/code/checkout.html
+++ b/code/checkout.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <div class="fixed-navbar">
     <div class="top-bar f-11">
         <div class="container-fluid">
             <div class="row">
@@ -97,6 +98,7 @@
             </div>
         </div>
     </nav>
+    </div>
 
     <section class="main-section">
         <div class="container">
