--- a/code/detail.html
+++ b/code/detail.html
@@ -813,6 +813,55 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="card rounded-0 mt-3">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between">
+                                            <div class="d-flex">
+                                                <div>
+                                                    <img src="../assets/WEB/ICON/ICON WEB131.svg" class="w-35 rounded-full" alt="">
+                                                </div>
+                                                <div class="ml-3 d-flex flex-column">
+                                                    <span class="f-11"><b>Sarah</b> - <span class="fc-text">08 Februari pukul 21:14</span></span>
+                                                    <span class="fc-text f-11 mt-2 w-max">Apakah produk masih ada?</span>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <button class="btn-white p-1 f-10 mr-3">Ikuti Diskusi</button>
+                                                <a href="">
+                                                    <img src="../assets/WEB/ICON/ICON WEB80.svg" class="w-30" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card bg-light rounded-0">
+                                    <div class="card-body">
+                                        <div class="d-flex justify-content-between pl-5">
+                                            <div class="d-flex">
+                                                <div>
+                                                    <img src="../assets/WEB/IMAGE/IMAGE WEB64.jpg" class="w-35 rounded-full" alt="">
+                                                </div>
+                                                <div class="ml-3 d-flex flex-column">
+                                                    <div class="item-badge">
+                                                        <span class="f-11"><b>Store.id</b> </span>
+                                                        <span class="success">
+                                                            Penjual
+                                                        </span>
+                                                        - <span class="fc-text">08 Februari pukul 21:14</span></span>
+                                                    </div>
+                                                    
+                                                    <span class="fc-text f-11 mt-2 w-max">Semua produk masih ready, silahkan di order.</span>
+                                                </div>
+                                            </div>
+                                            <div>
+                                                <a href="">
+                                                    <img src="../assets/WEB/ICON/ICON WEB80.svg" class="w-30" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
         
                         </div>
