--- a/code/keranjang.html
+++ b/code/keranjang.html
@@ -17,87 +17,89 @@
 </head>
 
 <body>
-    <div class="top-bar f-11">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-4">
-                    <div class="top-bar-item">
-                        <i class="fas fa-mobile-alt"></i><a href="#"> Download Onlinemol App</a>
+    <div class="fixed-navbar">
+        <div class="top-bar f-11">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-4">
+                        <div class="top-bar-item">
+                            <i class="fas fa-mobile-alt"></i><a href="#"> Download Onlinemol App</a>
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="text-end">
-                        <a href="#" class="top-bar-item right">Tentang Onlinemol</a>
-                        <a href="#" class="top-bar-item right">Mitra Onlinemol</a>
-                        <a href="#" class="top-bar-item right">Mulai Berjualan</a>
-                        <a href="#" class="top-bar-item right">Promo</a>
-                        <a href="#" class="top-bar-item right">Onlinemol Care</a>
+                    <div class="col">
+                        <div class="text-end">
+                            <a href="#" class="top-bar-item right">Tentang Onlinemol</a>
+                            <a href="#" class="top-bar-item right">Mitra Onlinemol</a>
+                            <a href="#" class="top-bar-item right">Mulai Berjualan</a>
+                            <a href="#" class="top-bar-item right">Promo</a>
+                            <a href="#" class="top-bar-item right">Onlinemol Care</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <nav class="nav-bar shadow-4">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-2 nav-bar-title">
+                        <a href="">
+                            <h3><b>Onlinemol</b></h3>
+                        </a>
+                    </div>
+                    <div class="col-7 nav-bar-search">
+                        <div class="input-group">
+                            <span class="input-group-text border-0">Kategori</span>
+                            <input type="text" class="form-control rounded" placeholder="Cari barang di sini" />
+                            <span class="input-group-text category-search-icon">
+                                <!-- <object data="../assets/WEB/ICON/ICON WEB03.svg"style="width: 22px;" type=""></object> -->
+                                <img src="../assets/WEB/ICON/ICON WEB03.svg" style="width: 22px;" class="img-fluid" alt="">
+                            </span>
+                        </div>
+                        <div class="search-recommendations f-10 fc-text">
+                            <a href="#">Dettol Spray</a>
+                            <a href="#">Vitamin C</a>
+                            <a href="#">Tote Bag</a>
+                            <a href="#">Laptop Dell</a>
+                            <a href="#">iPad Air 4</a>
+                            <a href="#">Xiaomi Massager</a>
+                            <a href="#">Tangga Lipat</a>
+                        </div>
+                    </div>
+                    <div class="col-1 nav-bar-misc">
+                        <a href="">
+                            <img src="../assets/WEB/ICON/ICON WEB39.svg" style="width: 32px;" alt="">
+                            <!-- <object data="" style="width: 32px;" type=""></object> -->
+                        </a>
+                        <!-- <i class="fas fa-shopping-cart"></i>
+                    <i class="fas fa-bell"></i>
+                    <i class="fas fa-envelope"></i> -->
+                    </div>
+                    <div class="col-1">
+                        <!-- <button
+                    type="button"
+                    class="btn btn-floating btn-store shadow-0"
+                    data-mdb-ripple-color="dark"
+                    >
+                    <i class="fas fa-store"></i>
+                    </button>
+                    <span>Toko</span> -->
+                        <button class="btn btn-outline-success">Masuk</button>
+                    </div>
+                    <div class="col-1">
+                        <!-- <button
+                    type="button"
+                    class="btn btn-floating btn-profile shadow-0"
+                    data-mdb-ripple-color="dark"
+                    >
+                    L
+                    </button>
+                    <span>Lidya</span> -->
+                        <button class="btn btn-success">Daftar</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </div>
-    <nav class="nav-bar shadow-4">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-2 nav-bar-title">
-                    <a href="">
-                        <h3><b>Onlinemol</b></h3>
-                    </a>
-                </div>
-                <div class="col-7 nav-bar-search">
-                    <div class="input-group">
-                        <span class="input-group-text border-0">Kategori</span>
-                        <input type="text" class="form-control rounded" placeholder="Cari barang di sini" />
-                        <span class="input-group-text category-search-icon">
-                            <!-- <object data="../assets/WEB/ICON/ICON WEB03.svg"style="width: 22px;" type=""></object> -->
-                            <img src="../assets/WEB/ICON/ICON WEB03.svg" style="width: 22px;" class="img-fluid" alt="">
-                        </span>
-                    </div>
-                    <div class="search-recommendations f-10 fc-text">
-                        <a href="#">Dettol Spray</a>
-                        <a href="#">Vitamin C</a>
-                        <a href="#">Tote Bag</a>
-                        <a href="#">Laptop Dell</a>
-                        <a href="#">iPad Air 4</a>
-                        <a href="#">Xiaomi Massager</a>
-                        <a href="#">Tangga Lipat</a>
-                    </div>
-                </div>
-                <div class="col-1 nav-bar-misc">
-                    <a href="">
-                        <img src="../assets/WEB/ICON/ICON WEB39.svg" style="width: 32px;" alt="">
-                        <!-- <object data="" style="width: 32px;" type=""></object> -->
-                    </a>
-                    <!-- <i class="fas fa-shopping-cart"></i>
-                <i class="fas fa-bell"></i>
-                <i class="fas fa-envelope"></i> -->
-                </div>
-                <div class="col-1">
-                    <!-- <button
-                  type="button"
-                  class="btn btn-floating btn-store shadow-0"
-                  data-mdb-ripple-color="dark"
-                >
-                  <i class="fas fa-store"></i>
-                </button>
-                <span>Toko</span> -->
-                    <button class="btn btn-outline-success">Masuk</button>
-                </div>
-                <div class="col-1">
-                    <!-- <button
-                  type="button"
-                  class="btn btn-floating btn-profile shadow-0"
-                  data-mdb-ripple-color="dark"
-                >
-                  L
-                </button>
-                <span>Lidya</span> -->
-                    <button class="btn btn-success">Daftar</button>
-                </div>
-            </div>
-        </div>
-    </nav>
 
     <section class="main-section">
         <div class="container">
