--- a/code/detail.html
+++ b/code/detail.html
@@ -58,6 +58,8 @@
                 max-width: 100%;
                 display: block; }
                 .preview-thumbnail.nav-tabs li a {
+                display: block;
+                position: relative;
                 padding: 0;
                 margin: 0; }
                 .preview-thumbnail.nav-tabs li:last-of-type {
@@ -197,18 +199,18 @@
                         <div class="col-md-5">
                             <div class="preview">
                                 <div class="preview-pic tab-content">
-                                  <div class="tab-pane active" id="pic-1" data-scale="1.6"><img class="item-photo" src="http://placekitten.com/400/252" /></div>
+                                  <div class="tab-pane active" id="pic-1" data-scale="1.6"><img class="item-photo" src="http://placekitten.com/200/126" /></div>
                                   <div class="tab-pane" id="pic-2" data-scale="1.6"><img class="item-photo" src="http://placekitten.com/400/252" /></div>
-                                  <div class="tab-pane" id="pic-3" data-scale="1.6"><img class="item-photo" src="http://placekitten.com/400/252" /></div>
+                                  <div class="tab-pane" id="pic-3" data-scale="1.6"><img class="item-photo" src="http://placekitten.com/200/126" /></div>
                                   <div class="tab-pane" id="pic-4" data-scale="1.6"><img class="item-photo" src="http://placekitten.com/400/252" /></div>
-                                  <div class="tab-pane" id="pic-5" data-scale="1.6"><img class="item-photo" src="http://placekitten.com/400/252" /></div>
+                                  <div class="tab-pane" id="pic-5" data-scale="1.6"><img class="item-photo" src="http://placekitten.com/200/126" /></div>
                                 </div>
                                 <ul class="preview-thumbnail nav nav-tabs">
-                                  <li class="active"><a data-target="#pic-1" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
-                                  <li><a data-target="#pic-2" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
-                                  <li><a data-target="#pic-3" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
-                                  <li><a data-target="#pic-4" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
-                                  <li><a data-target="#pic-5" data-toggle="tab"><img src="http://placekitten.com/200/126" /></a></li>
+                                  <li class="active"><a data-target="#pic-1" data-mdb-toggle="tab" href="#pic-1" role="tab"><img src="http://placekitten.com/200/126" /></a></li>
+                                  <li><a data-target="#pic-2" data-toggle="tab"  data-mdb-toggle="tab" href="#pic-2" role="tab"><img src="http://placekitten.com/400/252" /></a></li>
+                                  <li><a data-target="#pic-3" data-toggle="tab"  data-mdb-toggle="tab" href="#pic-3" role="tab"><img src="http://placekitten.com/200/126" /></a></li>
+                                  <li><a data-target="#pic-4" data-toggle="tab"  data-mdb-toggle="tab" href="#pic-4" role="tab"><img src="http://placekitten.com/400/252" /></a></li>
+                                  <li><a data-target="#pic-5" data-toggle="tab"  data-mdb-toggle="tab" href="#pic-5" role="tab"><img src="http://placekitten.com/200/126" /></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -822,7 +824,7 @@
                                                     <img src="../assets/WEB/ICON/ICON WEB131.svg" class="w-35 rounded-full" alt="">
                                                 </div>
                                                 <div class="ml-3 d-flex flex-column">
-                                                    <span class="f-11"><b>Sarah</b> - <span class="fc-text">08 Februari pukul 21:14</span></span>
+                                                    <span class="f-11"><b>Sarah</b> - <span class="fc-text f-10">08 Februari pukul 21:14</span></span>
                                                     <span class="fc-text f-11 mt-2 w-max">Apakah produk masih ada?</span>
                                                 </div>
                                             </div>
@@ -848,7 +850,7 @@
                                                         <span class="success">
                                                             Penjual
                                                         </span>
-                                                        - <span class="fc-text">08 Februari pukul 21:14</span></span>
+                                                        - <span class="fc-text f-10">08 Februari pukul 21:14</span></span>
                                                     </div>
                                                     
                                                     <span class="fc-text f-11 mt-2 w-max">Semua produk masih ready, silahkan di order.</span>
@@ -884,8 +886,8 @@
                                         <a href="">
                                             <img src="../assets/WEB/ICON/ICON WEB99.svg" class="w-30" alt="">
                                         </a>
-                                        <span>Stok <b>358</b></span>
-                                        <p class="fc-text">Beli > 20, lebih hemat!</p>
+                                        <span class="f-11">Stok <b>358</b></span>
+                                        <p class="fc-text f-10">Beli > 20, lebih hemat!</p>
                                         <a href="" class="text-link"><img src="../assets/WEB/ICON/ICON WEB90.svg" class="w-15" alt=""> Tambah Catatan</a>
                                         <div class="d-flex justify-content-between mt-3 lh-30 f-11 fc-text">
                                             <span>Subtotal</span>
